log/build_2025-03-25_11-23-52/lane_angle/stderr.log
  File "/home/crofi/AutoModel_Rep/install/lane_angle/lib/python3.10/site-packages/lane_angle/lane_angle.py", line 56
    print(f"deviation_x: {deviation_x})
          ^
SyntaxError: unterminated string literal (detected at line 56)

